--- a/awx-automation/ansible.cfg
+++ b/awx-automation/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory_plugins = ./inventory_plugins:~/.ansible/plugins/inventory:/usr/share/ansible/plugins/inventory
 interpreter_python = auto
-# inventory = ./inventory/ansible_provisioners
+inventory = ./inventory/ansible_provisioners
 #collections path specific to playbooks
 collection_paths = ./
 # Use the YAML callback plugin.
