--- a/awx-automation/mongodb-setup.yml
+++ b/awx-automation/mongodb-setup.yml
@@ -21,3 +21,11 @@
         aws_iam_role: "{{ aws_iam_role }}"
         app_cluster_name: "{{ app_cluster_name }}"
 
+    - include_role:
+        name: "mongodb"
+      vars:
+        mongodb_user_token: "{{ user_token }}"
+        mongodb_user: "{{ network.org_name }}-{{ env }}-{{ user }}"
+        mongodb_root_token: "{{ root_token }}"
+        mongodb_database: "openidl-offchain-db"
+
