--- a/awx-automation/roles/prereqs/tasks/main.yaml
+++ b/awx-automation/roles/prereqs/tasks/main.yaml
@@ -47,16 +47,17 @@
 
 - name: Download the helm bundle
   get_url: url=https://get.helm.sh/helm-v3.4.1-linux-amd64.tar.gz dest=/tmp/helm-bundle.zip
-  register: helm_download_bundle
+  register: helm_bundle_download
 
 - name: Unarchive the helm installer
-  unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/
-  register: helm_unarchive_installer
+  unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/linux-amd64/helm
+  register: helm_installer_unarchive
 
 - name: Intall helm
   shell: |
     sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
     sudo chmod +x /usr/local/bin/helm
+  when: helm_installer_unarchive.changed
 
 - name: Install ansible and its dependencies
   shell: |
