--- a/awx-automation/mongodb-cleanup.yml
+++ b/awx-automation/mongodb-cleanup.yml
@@ -14,6 +14,7 @@
 
     - name: delete vault secrets from aws secret manager
       shell: |
+        export AWS_PROFILE=cicd-role
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-mongodb-user --force-delete-without-recovery
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-mongodb-user-token --force-delete-without-recovery
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-mongodb-root-token --force-delete-without-recovery
