--- a/awx-automation/roles/prereqs/tasks/main.yaml
+++ b/awx-automation/roles/prereqs/tasks/main.yaml
@@ -43,7 +43,7 @@
   register: kubectl_setup
 
 - name: Update kubeconfig and set context to openidl application cluster
-  shell: export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ app_cluster_name }}
+  shell: export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
   register: app_cluster_context_set
 
 - name: Download the helm bundle
