--- a/awx-automation/vault-setup.yml
+++ b/awx-automation/vault-setup.yml
@@ -27,7 +27,7 @@
         aws_region: "{{ aws_region }}"
         aws_external_id: "{{ aws_external_id }}"
         aws_iam_role: "{{ aws_iam_role }}"
-        cluster_name: "{{ blk_cluster_name }}"
+        blk_cluster_name: "{{ blk_cluster_name }}"
 
     - include_role:
         name: "vault"
