--- a/awx-automation/mongodb-cleanup.yml
+++ b/awx-automation/mongodb-cleanup.yml
@@ -10,7 +10,7 @@
         aws_region: "{{ aws_region }}"
         aws_external_id: "{{ aws_external_id }}"
         aws_iam_role: "{{ aws_iam_role }}"
-        app_cluster_name: "{{ app_cluster_name }}"
+        cluster_name: "{{ app_cluster_name }}"
 
     - name: delete vault secrets from aws secret manager
       shell: |
