--- a/awx-automation/mongodb-setup.yml
+++ b/awx-automation/mongodb-setup.yml
@@ -19,7 +19,7 @@
         aws_region: "{{ aws_region }}"
         aws_external_id: "{{ aws_external_id }}"
         aws_iam_role: "{{ aws_iam_role }}"
-        cluster_name: "{{ cluster_name }}"
+        cluster_name: "{{ app_cluster_name }}"
 
     - include_role:
         name: "mongodb"
