--- a/awx-automation/vault-cleanup.yml
+++ b/awx-automation/vault-cleanup.yml
@@ -1,9 +1,20 @@
-- hosts: ansible_provisioners
+- hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
   tasks:
+    - include_role:
+        name: "prereqs"
+      vars:
+        aws_access_key: "{{ aws_access_key }}"
+        aws_secret_key: "{{ aws_secret_key }}"
+        aws_region: "{{ aws_region }}"
+        aws_external_id: "{{ aws_external_id }}"
+        aws_iam_role: "{{ aws_iam_role }}"
+        cluster_name: "{{ blk_cluster_name }}"
+
     - name: delete vault secrets from aws secret manager
       shell: |
+        export AWS_PROFILE=cicd-role
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --force-delete-without-recovery
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-config-vault --force-delete-without-recovery
         aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-kvs-vault --force-delete-without-recovery
