--- a/awx-automation/roles/mongodb/tasks/main.yaml
+++ b/awx-automation/roles/mongodb/tasks/main.yaml
@@ -57,7 +57,9 @@
 - name: upload mongodb user token to aws secrets manager
   shell: |
     export AWS_PROFILE=cicd-role; aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-user-token --description "Mongodb User Token" --secret-string {{ mongodb_user_token }}
+  no_log: True
 
 - name: upload mongodb root token to aws secrets manager
   shell: |
     export AWS_PROFILE=cicd-role; aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-root-token --description "Mongodb root token" --secret-string {{ mongodb_root_token }}
+  no_log: True
