--- a/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
+++ b/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
@@ -134,6 +134,7 @@
 
 - name: upload ca user token to aws secrets manager
   shell: |
+    export AWS_PROFILE=cicd-role
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-ca-app-user-token --description "Ca App User token" --secret-string {{ ca_user_token }}
 
 - name: Delete user script pod
