--- a/awx-automation/deploy-openidl-app-carrier.yaml
+++ b/awx-automation/deploy-openidl-app-carrier.yaml
@@ -1,17 +1,14 @@
 ---
-- hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
+- name: Deploy OpenIDL application for Carrier Node
+  hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
-  become: true
-
+  no_log: "{{ no_ansible_log | default(false) }}"
   tasks:
   - name: Install package dependencies
     package:
       name: "{{ item }}"
       state: present
     with_items:
-      - unzip
-      - python3
-      - python3-pip
       - curl
       - awscli
 
@@ -33,11 +30,17 @@
       external_id: "{{ aws_external_id }}"
       source_profile: "cicd-user"
       role_arn: "{{ aws_iam_role }}"
+      region: "{{ aws_region }}"
     changed_when: false
 
   - name: Test AWS CLI is functioning
     shell: export AWS_PROFILE=cicd-role; aws sts get-caller-identity
     register: aws_caller_identity
+
+  - name: Checking kubectl exists
+    stat:
+      path: /usr/local/bin/kubectl
+    register: kubectl_status
 
   - name: Setup kubectl utility
     shell: |
@@ -45,37 +48,37 @@
       chmod +x kubectl
       mv ./kubectl /usr/local/bin
     register: kubectl_setup
+    when: kubectl_status.stat.exists == False
 
-  - name: Update kubeconfig and set context to openidl application cluster
-    shell: export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ app_cluster_name }}
-    register: app_cluster_context_set
+  - name: Update kubeconfig and set context to openidl {{ cluster_name }}
+    shell: |
+      export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
+
+  - name: Checking helm exists
+    stat:
+      path: /usr/local/bin/helm
+    register: helm_status
 
   - name: Download the helm bundle
     get_url: url=https://get.helm.sh/helm-v3.4.1-linux-amd64.tar.gz dest=/tmp/helm-bundle.zip
-    register: helm_download_bundle
+    register: helm_bundle_download
+    when: helm_status.stat.exists == False
 
   - name: Unarchive the helm installer
-    unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/
-    register: helm_unarchive_installer
-    when: helm_download_bundle.changed
+    unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/linux-amd64/helm
+    register: helm_installer_unarchive
+    when: helm_bundle_download.changed
 
   - name: Intall helm
     shell: |
       sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
       sudo chmod +x /usr/local/bin/helm
-    when: helm_unarchive_installer.changed
+    when: helm_installer_unarchive.changed
 
-  - name: Install ansible and its dependencies
+  - name: Deploy openIDL app using helm
     shell: |
-      pip3 install openshift
-      sudo apt-get install python3-requests-oauthlib python-yaml jq -y
-      pip install --user ansible==2.9.11
-      pip3 install docker
-
-  - name: Create a k8s namespace
-    community.kubernetes.k8s:
-      name: database
-      api_version: v1
-      kind: Namespace
-      state: present
-
+      echo "Test"
+#      helm upgrade --recreate-pods --install dev-carrier ./openidl-k8s -f ./openidl-k8s/global-values-dev-carrier.yaml \
+#          -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true \
+#          --set global.carrierui.ingressenabled=true --set global.insurancedatamanager.ingressenabled=true \
+#          --set global.secrets.install=false
