--- a/awx-automation/deploy-openidl-app-carrier.yaml
+++ b/awx-automation/deploy-openidl-app-carrier.yaml
@@ -50,7 +50,7 @@
     register: kubectl_setup
     when: kubectl_status.stat.exists == False
 
-  - name: Update kubeconfig and set context to openidl {{ cluster_name }}
+  - name: Update kubeconfig and set context to openidl '{{ cluster_name }}'
     shell: |
       export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
 
