--- a/awx-automation/roles/prereqs/tasks/main.yaml
+++ b/awx-automation/roles/prereqs/tasks/main.yaml
@@ -35,25 +35,36 @@
   shell: export AWS_PROFILE=cicd-role; aws sts get-caller-identity
   register: aws_caller_identity
 
+- name: Checking kubectl exists
+  stat:
+    path: /usr/local/bin/kubectl
+  register: kubectl_status
+
 - name: Setup kubectl utility
   shell: |
     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
     chmod +x kubectl
     mv ./kubectl /usr/local/bin
-  register: kubectl_setup
+  when: kubectl_status.stat.exists == False
 
 - name: Update kubeconfig and set context to openidl EKS cluster
   shell: |
     export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
-  register: cluster_context_set
+
+- name: Checking helm exists
+  stat:
+    path: /usr/local/bin/helm
+  register: helm_status
 
 - name: Download the helm bundle
   get_url: url=https://get.helm.sh/helm-v3.4.1-linux-amd64.tar.gz dest=/tmp/helm-bundle.zip
   register: helm_bundle_download
+  when: helm_status.stats.exists == False
 
 - name: Unarchive the helm installer
   unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/linux-amd64/helm
   register: helm_installer_unarchive
+  when: helm_bundle_download.changed
 
 - name: Intall helm
   shell: |
