--- a/awx-automation/deploy-openidl-app.yaml
+++ b/awx-automation/deploy-openidl-app.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Deploy OpenIDL application for Carrier Node
+- name: Deploy OpenIDL application on {{ node_type }} node
   hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
@@ -76,7 +76,7 @@
 
   - name: Deploy openIDL app using helm
     shell: |
-      helm upgrade --recreate-pods --install dev-carrier ./openidl-k8s -f ./openidl-k8s/global-values-{{ env }}-carrier.yaml \
+      helm upgrade --recreate-pods --install dev-carrier ./openidl-k8s -f ./openidl-k8s/global-values-{{ env }}-{{ node_type }}.yaml \
           -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true \
           --set global.carrierui.ingressenabled=true --set global.insurancedatamanager.ingressenabled=true \
           --set global.secrets.install=false
