--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -5,11 +5,11 @@
     - include_role:
         name: "prereqs"
       vars:
-        aws_access_key: "{{ gitactions_user_access_key }}"
-        aws_secret_key: "{{ gitactions_user_secret_key }}"
+        aws_access_key: "{{ aws_access_key }}"
+        aws_secret_key: "{{ aws_secret_key }}"
         aws_region: "{{ aws_region }}"
-        aws_external_id: "{{ gitactions_user_external_id }}"
-        aws_iam_role: "{{ gitactions_user_iam_role }}"
+        aws_external_id: "{{ aws_external_id }}"
+        aws_iam_role: "{{ aws_iam_role }}"
         cluster_name: "{{ blk_cluster_name }}"
 
     - name: Get vault root token
@@ -24,13 +24,19 @@
         vault_token: "{{ vault.stdout }}"
         cluster_name: "{{ blk_cluster_name }}"
         action: "{{ deploy_action }}"
+        account: "{{ aws_account_number }}"
         region: "{{ aws_region }}"
         access_id: "{{ baf_user_access_key }}"
         access_key: "{{ baf_user_secret_key }}"
-        account: "{{ aws_account_number }}"
-        registry: "ghcr.io/{{ baf_image_repo }}"
+        gitops_repo_user: "{{ gitops_repo_user }}"
+        gitops_repo_user_token: "{{ gitops_repo_user_token }}"
+        gitops_repo_user_email: "{{ gitops_repo_user_email }}"
+        channel_name: "{{ channel_name }}"
+        chaincode_version: "${{ chaincode_version }}"
+        org_json: "${{ orderer-tls.stdout }}"
+        registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
-
+        extravars: "${{ extravars }}"
 
 
 
