--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -36,7 +36,7 @@
         org_json: "${{ orderer-tls.stdout }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
-        extravars: "${{ extravars }}"
+#        extravars: "${{ extravars }}" - fix this later.
 
 
 
