--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -1,8 +1,11 @@
 - hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
-  include_vars: '{{ org_name }}-config-{{ env }}.yml'
+
   tasks:
+    - name: "load variables"
+      include_vars: "{{ org_name }}-config{{ env }}"
+      
     - include_role:
         name: "prereqs"
       vars:
