--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -2,10 +2,9 @@
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
 
+  include_vars: "{{ org_name }}-config{{ env }}.yml"
+
   tasks:
-    - name: "load variables"
-      include_vars: "{{ org_name }}-config{{ env }}"
-      
     - include_role:
         name: "prereqs"
       vars:
