--- a/awx-automation/roles/prereqs/tasks/main.yaml
+++ b/awx-automation/roles/prereqs/tasks/main.yaml
@@ -12,7 +12,7 @@
 
 - name: Configure awscli credentials for IAM user
   shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-user
-  no_log: true
+  no_log: false
   with_dict:
     aws_access_key_id: "{{ aws_access_key }}"
     aws_secret_access_key: "{{ aws_secret_key }}"
@@ -23,7 +23,7 @@
 
 - name: Configure awscli credentials for IAM role
   shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-role
-  no_log: true
+  no_log: false
   with_dict:
     external_id: "{{ aws_external_id }}"
     source_profile: "cicd-user"
