--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -3,7 +3,7 @@
   no_log: "{{ no_ansible_log | default(false) }}"
 
   vars_files:
-    - "{{ org_name }}-config{{ env }}.yml"
+    - "./{{ org_name }}-config-{{ env }}.yml"
 
   tasks:
     - include_role:
