--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -3,11 +3,10 @@
   no_log: "{{ no_ansible_log | default(false) }}"
 
   vars_files:
-    - "./{{ org_name }}-config-{{ env }}.yml"
+    - "./hig-config-dev.yml"
 
   tasks:
-    - include_vars: "./{{ org_name }}-config-{{ env }}.yml"
-      
+
     - include_role:
         name: "prereqs"
       vars:
