--- a/awx-automation/pre-register-users.yml
+++ b/awx-automation/pre-register-users.yml
@@ -1,6 +1,9 @@
 - hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(true) }}"
+  vars_files:
+    - "./{{ org_name }}-config-{{ env }}.yml"
+
   tasks:
     - include_role:
         name: "prereqs"
@@ -40,3 +43,4 @@
         vault_kvs_user: "{{ vault_user.stdout }}"
         vault_kvs_user_token: "{{ vault_user_token.stdout }}"
         ca_user_token: "{{ ca_user_password }}"
+
