--- a/awx-automation/vault-cleanup.yml
+++ b/awx-automation/vault-cleanup.yml
@@ -1,6 +1,9 @@
 - hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
+  vars_files:
+    - "./{{ org_name }}-config-{{ env }}.yml"
+
   tasks:
     - include_role:
         name: "prereqs"
