--- a/awx-automation/vault-setup.yml
+++ b/awx-automation/vault-setup.yml
@@ -1,6 +1,9 @@
 - hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
+  vars_files:
+    - "./{{ org_name }}-config-{{ env }}.yml"
+
   tasks:
     - name: Get KMS ID
       shell: |
@@ -37,3 +40,5 @@
         vault_config_user_token: "{{ config_user_token }}"
         vault_kvs_user: "kvs-{{ network.org_name }}-{{ config_user }}"
         vault_kvs_user_token: "{{ kvs_user_token }}"
+        registry: "{{ baf_image_repo }}"
+
