--- a/awx-automation/aais-config-dev.yml
+++ b/awx-automation/aais-config-dev.yml
@@ -3,14 +3,14 @@ access_key: ""
 region: ""
 cluster_name: ""
 account: ""
-gitops_repo_url: "github.com/openidl-aais/openidl-aais-gitops"
-gitops_repo_branch: "aais_dev"
+gitops_repo_url: "github.com/rajeshsanjeevi/openidl-iaac.git"
+gitops_repo_branch: "hig-carrier"
 gitops_repo_user: ""
 gitops_repo_user_token: ""
 gitops_repo_user_email: ""
-ordererorg_domain: "openidl.aaisdirect.com"
-domain: "thetech.digital"
-internal_domain: "internal.thetech.digital"
+ordererorg_domain: "aais.thetech.digital"
+domain: "aais.thetech.digital"
+internal_domain: "aais.internal.thetech.digital"
 env: "dev"
 add_org: ""
 registry: ""
@@ -27,20 +27,27 @@ network:
         - name: "carrier"
           domain: "thetech.digital"
     channels:
-        - name: defaultchannel
-          chaincode:
-              name: openidl-cc-default
-              repo_url: github.com/openidl-org/openidl-main.git
-              repo_branch: develop
-              repo_path: openidl-chaincode/chaincode/openidl
-        - name: anal-aais
+        - name: analytics-carrier
           chaincode:
               name: openidl-cc-aais-carriers
-              repo_url: github.com/openidl-org/openidl-main.git
-              repo_branch: "develop"
+              repo_url: github.com/rajeshsanjeevi/openidl-main.git
+              repo_branch: hig-carrier
+              repo_path: openidl-chaincode/chaincode/openidl
+              collectionconfig:
+                - name: "analytics_carrier_pdc"
+                  policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
+        - name: analytics-aais
+          chaincode:
+              name: openidl-cc-aais-carriers
+              repo_url: github.com/rajeshsanjeevi/openidl-main.git
+              repo_branch: hig-carrier
               repo_path: openidl-chaincode/chaincode/openidl
               collectionconfig:
                 - name: "analytics_aais_pdc"
                   policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
-                - name: "anal_aais_pdc"
-                  policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
+        - name: defaultchannel
+          chaincode:
+              name: openidl-cc-default
+              repo_url: github.com/rajeshsanjeevi/openidl-main.git
+              repo_branch: hig-carrier
+              repo_path: openidl-chaincode/chaincode/openidl
