--- a/awx-automation/mongodb-setup.yml
+++ b/awx-automation/mongodb-setup.yml
@@ -15,7 +15,7 @@
         user: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=16') }}"
 
     - include_role:
-        name: "prereqs"
+        name: "prepare"
       vars:
         aws_access_key: "{{ aws_access_key }}"
         aws_secret_key: "{{ aws_secret_key }}"
