--- a/awx-automation/vault-cleanup.yml
+++ b/awx-automation/vault-cleanup.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - include_role:
-        name: "prereqs"
+        name: "prepare"
       vars:
         aws_access_key: "{{ aws_access_key }}"
         aws_secret_key: "{{ aws_secret_key }}"
