--- a/awx-automation/roles/prepare/tasks/rhel.yaml
+++ b/awx-automation/roles/prepare/tasks/rhel.yaml
@@ -9,9 +9,9 @@
     - python3
     - python3-pip
     - curl
-    - awscli
+    - awscli # not working, check the solution
     - python3-requests-oauthlib
-    - python-yaml
+    - python-yaml # not avaialble find the package name
     - jq
 
 - name: Configure awscli credentials for IAM user
@@ -78,6 +78,9 @@
     sudo chmod +x /usr/local/bin/helm
   when: helm_installer_unarchive.changed
 
+#identity ways to set this up in RHEL.
+#pip3 openshift, docker are available in RHEL
+#
 - name: Install Pip modules
   become: true
   pip:
