--- a/awx-automation/vault-cleanup.yml
+++ b/awx-automation/vault-cleanup.yml
@@ -1,5 +1,5 @@
 - hosts: ec2-18-117-73-151.us-east-2.compute.amazonaws.com
-  gather_facts: no
+  gather_facts: yes
   no_log: "{{ no_ansible_log | default(false) }}"
   vars_files:
     - "./{{ org_name }}-config-{{ env }}.yml"
