--- a/awx-automation/roles/prepare/tasks/main.yaml
+++ b/awx-automation/roles/prepare/tasks/main.yaml
@@ -30,6 +30,24 @@
     - jq
   when: ansible_distribution == "RedHat"
 
+- name: Install Pip modules
+  become: true
+  pip:
+    name: "{{ item.pkg_name }}"
+    extra_args: "{{ item.args }}"
+    executable: "{{ item.exec }}"
+  loop:
+    - { pkg_name: "ansible==2.9.11", exec: "pip3", args: "--user" }
+    - { pkg_name: "openshift", exec: "pip3", args: "" }
+    - { pkg_name: "docker", exec: "pip3", args: "" }
+
+- name: Install awscli - redhat
+  become: true
+  pip:
+    name: awscli
+    executable: pip
+  when: ansible_distribution == "Redhat"
+
 - name: Configure awscli credentials for IAM user
   shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-user
   no_log: false
@@ -94,15 +112,6 @@
     sudo chmod +x /usr/local/bin/helm
   when: helm_installer_unarchive.changed
 
-- name: Install Pip modules
-  become: true
-  pip:
-    name: "{{  item.pkg_name }}"
-    extra_args: "{{ item.args }}"
-    executable: "{{  item.exec }}"
-  loop:
-    - { pkg_name: "ansible==2.9.11", exec: "pip3", args: "--user" }
-    - { pkg_name: "openshift", exec: "pip3", args: "" }
-    - { pkg_name: "docker", exec: "pip3", args: "" }
+
 
 
