--- a/awx-automation/pre-register-users.yml
+++ b/awx-automation/pre-register-users.yml
@@ -1,5 +1,5 @@
 - hosts: ec2-18-119-105-48.us-east-2.compute.amazonaws.com
-  gather_facts: no
+  gather_facts: yes
   no_log: "{{ no_ansible_log | default(true) }}"
   vars_files:
     - "./{{ org_name }}-config-{{ env }}.yml"
