--- a/awx-automation/vault-cleanup.yml
+++ b/awx-automation/vault-cleanup.yml
@@ -1,4 +1,4 @@
-- hosts: ansible_provisioners
+- hosts: local
   gather_facts: yes
   no_log: "{{ no_ansible_log | default(false) }}"
   vars_files:
