--- a/awx-automation/vault.yml
+++ b/awx-automation/vault.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - include_role:
-        name: "prerun"
+        name: "prerun-job"
       vars:
         aws_access_key: "{{ aws_access_key }}"
         aws_secret_key: "{{ aws_secret_key }}"
