--- a/awx-automation/vault.yml
+++ b/awx-automation/vault.yml
@@ -25,6 +25,6 @@
         vault_kvs_user_token: "{{ kvs_user_token }}"
         registry: "{{ baf_image_repo }}"
         cluster_name: "{{ blk_cluster_name }}"
-        action: "{{ action }}"
+        deploy_action: "{{ action }}"
 
 
