--- a/awx-automation/roles/vault/tasks/main.yaml
+++ b/awx-automation/roles/vault/tasks/main.yaml
@@ -2,11 +2,14 @@
 - name: "Setting up vault cluster"
   include_tasks: "{{ item }}.yaml"
   with_items:
-    - "pre-tasks"
+    - "pre-tasks-deploy"
     - "deploy"
   when: deploy_action == "vault-deploy"
 
 - name: "Cleanup vault cluster"
-  include_tasks: "cleanup.yaml"
+  include_tasks: "{{ item }}.yaml"
+  with_items:
+    - "pre-tasks-cleanup"
+    - "cleanup"
   when: deploy_action == "vault-cleanup"
 
