--- a/awx-automation/roles/vault/tasks/pre-tasks-deploy.yaml
+++ b/awx-automation/roles/vault/tasks/pre-tasks-deploy.yaml
@@ -1,3 +1,4 @@
+---
 - name: Get KMS ID
   shell: |
     export AWS_PROFILE=cicd-role
@@ -15,3 +16,7 @@
 
 - set_fact:
     kvs_user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+
+- name: Update kubeconfig and set context to openidl EKS cluster
+  shell: |
+    export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
